examples/test/testpolicy9259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9259
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key35: value4
      key17: value39
      key26: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value39
      podSelector:
        matchLabels:
          key1: value13
          key25: value43
          key32: value20
